Phase 5 Implementation: Public Jobs Browsing & Telegram/WhatsApp Notifications
- Moved /jobs route from protected DashboardLayout to public MainLayout for unauthenticated job browsing
- Added Telegram/WhatsApp contact fields to ProfilePage (WhatsApp Number, Telegram ID, Telegram Username)
- Created /api/auth/profile PUT endpoint for profile updates with new contact fields
- Fixed job card display: added company.id field and status property to job conversion
- Updated JobsPage job conversion to properly handle meta.company and meta.applyLink
- Extended User model API to accept phoneNumber, whatsappNumber, telegramId, telegramUsername fields
- Updated AdminCrawlers.tsx UI to show conditional 'Indian Jobs' vs 'Global Jobs' filtering modes
- Admin crawlers now display filter context in header, stats, and success messages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,11 +53,13 @@ services:
     build:
       context: ./JobIntel/frontend
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: http://jobintel-backend:5000
     container_name: jobintel-frontend
     ports:
       - "8080:8080"
     environment:
-      VITE_API_URL: http://localhost:5000
+      VITE_API_URL: http://jobintel-backend:5000
     depends_on:
       - backend
     networks:
