--- a/JobIntel/netlify.toml
+++ b/JobIntel/netlify.toml
@@ -1,16 +1,50 @@
-# Netlify config for JobIntel monorepo
+# Netlify Configuration for JobIntel Frontend
+# Deployment: https://jobintel.netlify.app
 
 [build]
   command = "npm ci && npm run build -w frontend"
   publish = "frontend/dist"
   functions = "frontend/netlify/functions"
 
-# IMPORTANT: Do NOT set VITE_API_URL here. Set VITE_API_URL in Netlify site UI (Site › Site settings › Build & deploy › Environment).
-# Example (DO NOT UNCOMMENT/COMMIT):
-# [build.environment]
-#   VITE_API_URL = "https://jobintel-backend.onrender.com"
+# Build environment variables
+[build.environment]
+  NODE_VERSION = "20"
+  # IMPORTANT: Set VITE_API_URL in Netlify site UI (Site › Settings › Build & deploy › Environment)
+  # DO NOT commit sensitive values to this file
+  # Example: VITE_API_URL = "https://jobintel-backend.onrender.com"
 
+# Cache settings
+[context.production]
+  command = "npm ci && npm run build -w frontend"
+
+[context.preview]
+  command = "npm ci && npm run build -w frontend"
+
+[context.branch-deploy]
+  command = "npm ci && npm run build -w frontend"
+
+# Single Page App Routing - redirect all requests to index.html
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+# Security headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "SAMEORIGIN"
+    X-Content-Type-Options = "nosniff"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self' https:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https:;"
+
+# Asset caching
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# API endpoint configuration
+# See Site › Settings › Build & deploy › Build hooks for automated deployments
+
