--- a/JobIntel/netlify.toml
+++ b/JobIntel/netlify.toml
@@ -2,9 +2,9 @@
 # Deployment: https://jobintel.netlify.app
 
 [build]
-  command = "npm ci && npm run build -w frontend"
+  command = "npm ci && npm run build --workspace=frontend"
   publish = "frontend/dist"
-  functions = "frontend/netlify/functions"
+  base = "JobIntel"
 
 # Build environment variables
 [build.environment]
